# optiml

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  convert-hf-to-Optiml-gguf.py  convert.py  ggml-alloc.c  ggml-cuda.cu  ggml-mpi.c  ggml-opencl.cpp  ggml-quants.c  ggml.c  ggml.h  llama.cpp  requirements.txt
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  enhancement.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  zig-build.yml
Optiml-py/: pyproject.toml
Optiml-py/Optiml/: export_split.py
common/: common.cpp  common.h  console.h  grammar-parser.h  log.h  pm.cpp  sampling.h
docs/: token_generation_performance_tips.md
examples/baby-llama/: baby-llama.cpp
examples/batched/: batched.cpp
examples/embedding/: embedding.cpp
examples/main/: main.cpp
examples/perplexity/: perplexity.cpp
examples/quantize/: quantize.cpp
examples/server/: chat.mjs  server.cpp
examples/simple/: simple.cpp
gguf-py/gguf/: __init__.py  constants.py  gguf_reader.py  gguf_writer.py
gguf-py/scripts/: gguf-convert-endian.py  gguf-dump.py  gguf-set-metadata.py
gguf-py/tests/: test_gguf.py
